Cambio de instrucciones

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h1 class="fs-3 fw-bold">Bienvenido a tu asistente "Yaquis"</h1>
 
         <p class="container mt-4 text-center margin">
-            Por favor, mencione el PIN de seguridad para comenzar con la aplicación de Detección de voz.
+            Por favor, mencione el nombre del administrador junto con el PIN de seguridad para comenzar con la aplicación de Detección de voz.
         </p>
 
         <div class="row g-3 align-items-center">
             <div class="col-auto mx-auto">
-              <input type="text" id="pin" class="form-control" aria-describedby="passwordHelpInline" disabled placeholder="Ejemplo: Yaquis, 1234">
+              <input type="text" id="pin" class="form-control" aria-describedby="passwordHelpInline" disabled placeholder="Ejemplo: Yaquis, admin 1234">
             </div>
         </div>
     </div>
