--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-light navbar-custom">
             <div class="container-fluid">
                 <a class="navbar-brand small-text">
-                    <img src="/media/sonido-de-onda.png" alt="" width="30" height="24" class="d-inline-block align-text-top"/>
+                    <img src="media/sonido-de-onda.png" alt="" width="30" height="24" class="d-inline-block align-text-top"/>
                     <span class="brand-with-image">Ingreso a la aplicación</span>
                 </a>
             </div>
